--- a/src/app/state-selector/state-selector.component.css
+++ b/src/app/state-selector/state-selector.component.css
@@ -5,8 +5,19 @@
  * and the profit contribution agreement available at https://www.my-d.org/ProfitContributionAgreement
  */
 
-app-state-selector .mat-form-field-infix{
-  width:80px;
-  font-size: 0.8em;
-  margin-top: 10px;
+.compact .mat-form-field-flex{
+  margin-top: 20px !important;
+  padding: 0 .35em 0 .35em !important;
 }
+
+.compact .mat-form-field-infix{
+  width: 85px;
+  font-size: 0.8em;
+  padding: 6px;
+  border-width: 10px;
+}
+
+.compact .mat-select-arrow{
+  margin-top: 7px;
+}
+
